@@ -4,21 +4,21 @@ logging.level.org.org.springframework=debug
 
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
-cx.restUrl=http://cxlocal
+#cx.restUrl=http://cxlocal
 #cx.restUrl=http://192.168.57.11
-#cx.restUrl=http://54.237.215.8
+cx.restUrl=http://54.237.215.8
 cx.userName=admin@cx
 cx.password=Im@hom3y!!
 cx.cxEnginePrefix=**
 cx.expireEngineBufferMins=1
 cx.enginePoolPrefix=cx-engine
-cx.idleMonitorSecs=60
+cx.idleMonitorSecs=30
 #cx.userAgent=CxDynamicEngineManager
-cx.timeoutSecs=60
+cx.timeoutSecs=120
 cx.queueCapacity=100
 cx.queueIntervalSecs=15
 cx.queueingEngineId=1
-cx.concurrentScanLimit=1
+cx.concurrentScanLimit=3
 
 
 # see AwsConfig class for definitions
